--- a/data_pipeline/Dockerfile
+++ b/data_pipeline/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.8
 COPY . .
 
-RUN pip install -r data_processing/requirements.txt
+RUN pip install -r scraper/requirements.txt
 
-CMD ["python", "data_processing/aggregatedcsv2redis.py"]
+#CMD ["python", "data_processing/aggregatedcsv2redis.py"]
+CMD ["python", "data_pipeline.py"]
